@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-07-15T08:19:42Z",
-  "count" : 2,
+  "timestamp" : "2022-07-15T16:24:00Z",
+  "count" : 1,
   "count_minmax" : [ 1, 4 ],
-  "count_decinc" : [ -2, +4 ],
+  "count_decinc" : [ -3, +4 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -1, +2 ]
