@@ -1,13 +1,13 @@
 {
-  "timestamp" : "2022-07-15T08:19:42Z",
+  "timestamp" : "2022-07-15T16:24:00Z",
   "count_outdated" : 389,
   "uniques_outdated" : 224,
   "count" : 420,
-  "uniques" : 241,
+  "uniques" : 242,
   "clones" : [
     {
       "timestamp": "2022-07-01T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
@@ -100,6 +100,13 @@
       "timestamp": "2022-07-14T00:00:00Z",
       "count": 3,
       "count_minmax": [ 1, 3 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-07-15T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
