@@ -1,3 +1,10 @@
+2022-07-15T16:24:00Z:
+* notice: last 14d: unq all: 4 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 224 389 / 241 420
+* notice: next accum: outdated-unq outdated-all / unq all: 224 389 / 242 420
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-07-01 2022-07-15]
+
 2022-07-15T08:19:42Z:
 * notice: last 14d: unq all: 4 31
 * notice: prev accum: outdated-unq outdated-all / unq all: 224 389 / 242 422
